Update getWrapper()