@@ -237,7 +237,7 @@ public interface Wrapper {
 
     static Wrapper getWrapper() {
         try {
-            return (Wrapper) Class.forName("us.teaminceptus.novaconomy.Wrapper" + getServerVersion()).newInstance();
+            return (Wrapper) Class.forName("us.teaminceptus.novaconomy.Wrapper" + getServerVersion()).getConstructor().newInstance();
         } catch (Exception e) { NovaConfig.getLogger().severe(e.getMessage()); return null; }
     }
 
